# prompt-panda

./: .gitignore  README.md  config.yaml  example.config.yaml  main.py  pyproject.toml
prompt_panda/: __init__.py  agent_core.py  audit_log.py  email_adapter.py  ipi_filter.py  telegram_adapter.py
tests/: test_email_adapter.py
